[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pynostr"]

[project]
name = "pynostr"
authors = [
  { name="Holger Nahrstaedt", email="nahrstaedt@gmail.com" },
]
description = "Python Library for nostr."
keywords = ["nostr"]
urls = { Homepage = "https://github.com/holgern/pynostr" }
readme = "README.md"
requires-python = ">3.8.0"
dependencies = [
    "coincurve>=1.8.0",
    "cryptography>=37.0.4",
    "tlv8",
    "click",
    "websocket-client>=1.3.3"
]
license = {file = "LICENSE"}
classifiers=[
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
]

dynamic=["version"]

[tool.setuptools_scm]
write_to = "pynostr/_version.py"

[project.scripts]
pynostr = "pynostr.cli:main"

[tool.tox]
legacy_tox_ini = """

[testenv]
deps =
    pytest
    pytest-cov[all]
commands =
    pytest
"""
